getEntitiesInCone actually works, add ItemHelper